core/src/main/java/com/flyordie/code/webidl/parser/WebIDLParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.flyordie.code.webidl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class WebIDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, PARTIAL=69, EXCEPTION=70, STATIC=71, READONLY=72, 
		STRINGIFIER=73, INCLUDES=74, OPTIONAL=75, ANY=76, INTEGER_WEBIDL=77, DECIMAL_WEBIDL=78, 
		IDENTIFIER_WEBIDL=79, STRING_WEBIDL=80, WHITESPACE_WEBIDL=81, COMMENT_WEBIDL=82, 
		PREPROCESSOR_MACRO_WEBIDL=83, OTHER_WEBIDL=84;
	public static final int
		RULE_webIDL = 0, RULE_definition = 1, RULE_callback = 2, RULE_callbackInterface = 3, 
		RULE_interface = 4, RULE_interfaceMixin = 5, RULE_namespace = 6, RULE_interfaceMembers = 7, 
		RULE_interfaceMember = 8, RULE_partialInterfaceMembers = 9, RULE_partialInterfaceMember = 10, 
		RULE_argumentNameKeyword = 11, RULE_inheritance = 12, RULE_mixinMembers = 13, 
		RULE_mixinMember = 14, RULE_attribute = 15, RULE_includesStatement = 16, 
		RULE_callbackInterfaceMembers = 17, RULE_callbackInterfaceMember = 18, 
		RULE_const_ = 19, RULE_constValue = 20, RULE_booleanLiteral = 21, RULE_floatLiteral = 22, 
		RULE_constType = 23, RULE_inheritAttribute = 24, RULE_attributeName = 25, 
		RULE_attributeNameKeyword = 26, RULE_defaultValue = 27, RULE_operationKind = 28, 
		RULE_operation = 29, RULE_operationName = 30, RULE_plainStringifier = 31, 
		RULE_argumentList = 32, RULE_argument = 33, RULE_argumentName = 34, RULE_ellipsis = 35, 
		RULE_constructor = 36, RULE_iterable = 37, RULE_optionalType = 38, RULE_asyncIterable = 39, 
		RULE_optionalArgumentList = 40, RULE_maplike = 41, RULE_setlikeRest = 42, 
		RULE_attributedNamespaceMember = 43, RULE_namespaceMember = 44, RULE_dictionary = 45, 
		RULE_dictionaryMembers = 46, RULE_dictionaryMember = 47, RULE_default_ = 48, 
		RULE_enum_ = 49, RULE_typedef_ = 50, RULE_type_ = 51, RULE_arrayDimension = 52, 
		RULE_typeWithExtendedAttributes = 53, RULE_unionType = 54, RULE_unionMemberType = 55, 
		RULE_distinguishableType = 56, RULE_primitiveType = 57, RULE_unrestrictedFloatType = 58, 
		RULE_floatType = 59, RULE_unsignedIntegerType = 60, RULE_integerType = 61, 
		RULE_optionalLong = 62, RULE_stringType = 63, RULE_promiseType = 64, RULE_recordType = 65, 
		RULE_null_ = 66, RULE_extendedAttributeList = 67, RULE_other = 68, RULE_otherOrComma = 69, 
		RULE_identifierList = 70, RULE_identifiers = 71, RULE_extendedAttribute = 72, 
		RULE_extendedAttributeNoArgs = 73, RULE_extendedAttributeEmpty = 74, RULE_extendedAttributeArgList = 75, 
		RULE_extendedAttributeIdent = 76, RULE_extendedAttributeVal = 77, RULE_extendedAttributeIdentList = 78, 
		RULE_extendedAttributeNamedArgList = 79, RULE_extendedAttributeString = 80, 
		RULE_extendedAttributeStringList = 81, RULE_stringList = 82, RULE_strings = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"webIDL", "definition", "callback", "callbackInterface", "interface", 
			"interfaceMixin", "namespace", "interfaceMembers", "interfaceMember", 
			"partialInterfaceMembers", "partialInterfaceMember", "argumentNameKeyword", 
			"inheritance", "mixinMembers", "mixinMember", "attribute", "includesStatement", 
			"callbackInterfaceMembers", "callbackInterfaceMember", "const_", "constValue", 
			"booleanLiteral", "floatLiteral", "constType", "inheritAttribute", "attributeName", 
			"attributeNameKeyword", "defaultValue", "operationKind", "operation", 
			"operationName", "plainStringifier", "argumentList", "argument", "argumentName", 
			"ellipsis", "constructor", "iterable", "optionalType", "asyncIterable", 
			"optionalArgumentList", "maplike", "setlikeRest", "attributedNamespaceMember", 
			"namespaceMember", "dictionary", "dictionaryMembers", "dictionaryMember", 
			"default_", "enum_", "typedef_", "type_", "arrayDimension", "typeWithExtendedAttributes", 
			"unionType", "unionMemberType", "distinguishableType", "primitiveType", 
			"unrestrictedFloatType", "floatType", "unsignedIntegerType", "integerType", 
			"optionalLong", "stringType", "promiseType", "recordType", "null_", "extendedAttributeList", 
			"other", "otherOrComma", "identifierList", "identifiers", "extendedAttribute", 
			"extendedAttributeNoArgs", "extendedAttributeEmpty", "extendedAttributeArgList", 
			"extendedAttributeIdent", "extendedAttributeVal", "extendedAttributeIdentList", 
			"extendedAttributeNamedArgList", "extendedAttributeString", "extendedAttributeStringList", 
			"stringList", "strings"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'callback'", "'constructor'", "'='", "'('", "')'", "';'", "'interface'", 
			"'{'", "'}'", "'mixin'", "'namespace'", "'serializer'", "'attribute'", 
			"'const'", "'enum'", "'async'", "'deleter'", "'dictionary'", "'getter'", 
			"'inherit'", "'iterable'", "'maplike'", "'required'", "'setlike'", "'setter'", 
			"'typedef'", "'unrestricted'", "':'", "'implements'", "'true'", "'false'", 
			"'-Infinity'", "'Infinity'", "'NaN'", "'['", "']'", "'null'", "'legacycaller'", 
			"','", "'...'", "'<'", "'>'", "'or'", "'sequence'", "'object'", "'symbol'", 
			"'FrozenArray'", "'ObservableArray'", "'undefined'", "'boolean'", "'byte'", 
			"'octet'", "'bigint'", "'void'", "'float'", "'double'", "'unsigned'", 
			"'short'", "'long'", "'ByteString'", "'DOMString'", "'USVString'", "'Promise'", 
			"'record'", "'?'", "'-'", "'.'", "'*'", "'partial'", "'exception'", "'static'", 
			"'readonly'", "'stringifier'", "'includes'", "'optional'", "'any'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "PARTIAL", "EXCEPTION", 
			"STATIC", "READONLY", "STRINGIFIER", "INCLUDES", "OPTIONAL", "ANY", "INTEGER_WEBIDL", 
			"DECIMAL_WEBIDL", "IDENTIFIER_WEBIDL", "STRING_WEBIDL", "WHITESPACE_WEBIDL", 
			"COMMENT_WEBIDL", "PREPROCESSOR_MACRO_WEBIDL", "OTHER_WEBIDL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebIDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WebIDLContext extends RuleContextWithAltNum {
		public TerminalNode EOF() { return getToken(WebIDLParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public WebIDLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_webIDL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterWebIDL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitWebIDL(this);
		}
	}

	public final WebIDLContext webIDL() throws RecognitionException {
		WebIDLContext _localctx = new WebIDLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_webIDL);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 34427144322L) != 0 || (((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & 1027L) != 0) {
				{
				{
				setState(168);
				definition();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends RuleContextWithAltNum {
		public CallbackContext callback() {
			return getRuleContext(CallbackContext.class,0);
		}
		public CallbackInterfaceContext callbackInterface() {
			return getRuleContext(CallbackInterfaceContext.class,0);
		}
		public InterfaceContext interface_() {
			return getRuleContext(InterfaceContext.class,0);
		}
		public InterfaceMixinContext interfaceMixin() {
			return getRuleContext(InterfaceMixinContext.class,0);
		}
		public DictionaryContext dictionary() {
			return getRuleContext(DictionaryContext.class,0);
		}
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public Enum_Context enum_() {
			return getRuleContext(Enum_Context.class,0);
		}
		public Typedef_Context typedef_() {
			return getRuleContext(Typedef_Context.class,0);
		}
		public IncludesStatementContext includesStatement() {
			return getRuleContext(IncludesStatementContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				callback();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				callbackInterface();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(178);
				interface_();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(179);
				interfaceMixin();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(180);
				dictionary();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(181);
				namespace();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(182);
				enum_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(183);
				typedef_();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(184);
				includesStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallbackContext extends RuleContextWithAltNum {
		public ExtendedAttributeListContext extendedAttributeList() {
			return getRuleContext(ExtendedAttributeListContext.class,0);
		}
		public TerminalNode IDENTIFIER_WEBIDL() { return getToken(WebIDLParser.IDENTIFIER_WEBIDL, 0); }
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public CallbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterCallback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitCallback(this);
		}
	}

	public final CallbackContext callback() throws RecognitionException {
		CallbackContext _localctx = new CallbackContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_callback);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			extendedAttributeList();
			setState(188);
			match(T__0);
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(189);
				match(T__1);
				}
			}

			setState(192);
			match(IDENTIFIER_WEBIDL);
			setState(193);
			match(T__2);
			setState(194);
			type_();
			setState(195);
			match(T__3);
			setState(196);
			argumentList();
			setState(197);
			match(T__4);
			setState(198);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
